--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
              <img class="grid-item" src="https://images.unsplash.com/photo-1626692987335-15dfc7a6f4b2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80" alt="imagen 12"> 
              <img class="grid-item" src="https://images.unsplash.com/photo-1626680114529-3f6ffa002b80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=632&q=80" alt="imagen 13"> 
              <img class="grid-item" src="https://images.unsplash.com/photo-1626634913593-e5b88fd85627?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="imagen 14"> 
-             <img class="grid-item" src="https://th.bing.com/th?id=OIF.yn%2fiqqLJMcIn%2fUCg%2f%2bGVUw&w=203&h=307&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 15"> 
-             <img class="grid-item" src="https://th.bing.com/th/id/OIF.0Om9XBXT7inoLNRI0qYmeA?w=204&h=306&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 16"> 
+             <img class="grid-item" src="https://images.unsplash.com/photo-1670195280352-12edb06125cc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyN3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="imagen 15"> 
+             <img class="grid-item" src="https://images.unsplash.com/photo-1670220597042-90660187dabe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="imagen 16"> 
              <img class="grid-item" src="https://i.pinimg.com/564x/25/0f/a3/250fa3bf183919ae9e2c1b67dc24a197.jpg" alt="imagen 17"> 
              <img class="grid-item" src="https://th.bing.com/th/id/OIP.16jeMkdqk_91jrdoEpvn1wHaLF?w=204&h=305&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 18"> 
              <img class="grid-item" src="https://th.bing.com/th/id/OIP.DzgBh_UzG3_IS1_RIu-k2gHaLG?w=204&h=306&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 19"> 
@@ -102,7 +102,7 @@
              <img class="grid-item" src="https://th.bing.com/th/id/OIP.DzgBh_UzG3_IS1_RIu-k2gHaLG?w=204&h=306&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 29"> 
              <img class="grid-item" src="https://i.pinimg.com/originals/15/29/0b/15290bbc53d23acf89de16f6e8274473.jpg" alt="imagen 30"> 
              <img class="grid-item" src="https://th.bing.com/th/id/OIP.SeJ_pI-zL35zxcfMKw54pgHaLK?w=203&h=306&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 31"> 
-             <img class="grid-item" src="https://th.bing.com/th?id=OIF.yn%2fiqqLJMcIn%2fUCg%2f%2bGVUw&w=203&h=307&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 32"> 
+             <img class="grid-item" src="https://images.unsplash.com/photo-1670220597042-90660187dabe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzOXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=607" alt="imagen 32"> 
              <img class="grid-item" src="https://th.bing.com/th/id/OIP.UM8lPam5KmjbOApyQIyf5gHaLH?w=204&h=306&c=7&o=5&dpr=1.25&pid=1.7" alt="imagen 33"> 
              <img class="grid-item" src="https://st.depositphotos.com/1007373/3945/i/950/depositphotos_39459925-stock-photo-eye-of-the-sea-lake.jpg" alt="imagen 34"> 
              <img class="grid-item" src="https://c8.alamy.com/compes/r0rx8f/una-imagen-de-paisaje-vertical-de-un-carril-del-pais-que-esta-cubierto-con-las-hojas-que-caen-de-los-arboles-en-las-zonas-rurales-de-sussex-de-nueva-brunswick-canada-r0rx8f.jpg" alt="imagen 35"> 
